--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -46,9 +47,9 @@
                 <input type="date" id="endDate">
             </div>
             <div class="limit-inputs">
-                <label for="maxWeekdays">Máx Dias Semana:</label>
+                <label for="maxWeekdays">Semana:</label>
                 <input type="number" id="maxWeekdays" value="5" min="0">
-                <label for="maxWeekends">Máx Dias Fim Semana:</label>
+                <label for="maxWeekends">Fim-Semana:</label>
                 <input type="number" id="maxWeekends" value="2" min="0">
             </div>
             <div class="auto-schedule-toggle">
