--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,6 +21,11 @@
     </script>
 </head>
 <body>
+    <div class="add-to-home" id="addToHomeButton">
+        <img src="192.png" alt="Add to Home">
+        <span class="add-to-home-tooltip">Adicionar à tela inicial (OFF)</span>
+    </div>
+    
     <div class="container">
         <h1>Selecione a Equipe</h1>
         <div class="team-selection" id="teamSelection">
@@ -47,14 +51,15 @@
                 <input type="date" id="endDate">
             </div>
             <div class="limit-inputs">
-                <label for="maxWeekdays">Semana:</label>
+                <label for="maxWeekdays">Máx Dias Semana:</label>
                 <input type="number" id="maxWeekdays" value="5" min="0">
-                <label for="maxWeekends">Fim-Semana:</label>
+                <label for="maxWeekends">Máx Dias Fim Semana:</label>
                 <input type="number" id="maxWeekends" value="2" min="0">
             </div>
             <div class="auto-schedule-toggle">
                 <label for="useAutoSchedule">Usar Escala Automática:</label>
                 <input type="checkbox" id="useAutoSchedule">
+                <button id="viewSavedSchedulesButton" class="view-schedules-button">Consultar Escalas</button>
             </div>
             <div class="calendar-container" id="calendarContainer">
                 <!-- Calendar will be displayed here -->
@@ -65,6 +70,7 @@
                  <button id="resetScheduleButton">Reset Escala</button> 
                  <button id="pdfScheduleButton">Escala PDF</button>
                  <button id="exceptionButton">Exceção</button>
+                 <button id="newScheduleButton">Nova Escala</button>
             </div>
         </div>
 
