--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 
         <div class="schedule-input-container" id="scheduleInputContainer">
             <div class="section-header">
-                <h2>Gerar Escala para a Equipe <span id="scheduleInfo" class="section-info"></span></h2>
+                <h2>Gerar Escala<span id="scheduleInfo" class="section-info"></span></h2>
                 <button id="toggleScheduleSection" class="toggle-button">−</button>
             </div>
             <div class="date-inputs">
-                <label for="startDate">Data Inicial:</label>
+                <label for="startDate">Inicial:</label>
                 <input type="date" id="startDate">
-                <label for="endDate">Data Final:</label>
+                <label for="endDate">Final:</label>
                 <input type="date" id="endDate">
             </div>
             <div class="limit-inputs">
-                <label for="maxWeekdays">Máx Dias Semana:</label>
+                <label for="maxWeekdays">Dias Semana:</label>
                 <input type="number" id="maxWeekdays" value="5" min="0">
-                <label for="maxWeekends">Máx Dias Fim Semana:</label>
+                <label for="maxWeekends">Fim Semana:</label>
                 <input type="number" id="maxWeekends" value="2" min="0">
             </div>
             <div class="auto-schedule-toggle">
