--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -53,7 +54,7 @@
             <div class="limit-inputs">
                 <label for="maxWeekdays">Dias Semana:</label>
                 <input type="number" id="maxWeekdays" value="5" min="0">
-                <label for="maxWeekends">Fim Semana:</label>
+                <label for="maxWeekends">Dias Fim Semana:</label>
                 <input type="number" id="maxWeekends" value="2" min="0">
             </div>
             <div class="auto-schedule-toggle">
